Only shaded area of box is clickable and radius of other shapes

--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
         <title>Hello, World!</title>
     </head>
     <body>
-        <h1>Hello, World!</h1>
+        <h1>UWS Week One Task</h1>
+
+            <map name="shapes_map"> <!-- https://www.programminghead.com/Projects/find-coordinates-of-image-online.html ; this is used to find coordenets on the image -->
+                <area shape="rect" coords="92,93,181,185" title=""> <!-- Used ChatGPT to explain how to get the blank one to overlap the rectangle -->
+                <area shape="rect" coords="45,47,228,230" title="Ractangle" href="https://www.google.com/">
+
+                <area shape="circle" coords="362,137,85" title="Circle">
+                <area shape="circle" coords="362,137,99" title="Circle" href="https://www.bing.com/">
+
+                <area shape="poly" coords="590,60,489,223,692,224" title="">
+                <area shape="poly" coords="590,42,471,231,707,232" title="" href="https://www.yahoo.com/">
+
+                <area shape="poly" coords="817,61,796,114,743,137,796,159,818,213,838,160,894,137,839,112" title="">
+                <area shape="poly" coords="818,39,788,108,718,137,786,168,817,233,848,166,914,136,848,107" title="" href="https://www.ebay.com/">
+
+                
+
+            </map>
+
+            <img  src="/image/map.png" alt="Blue rectangel, Pink tirangle, blue circle" usemap="#shapes_map">
+
     </body>
 </html>
