--- a/main.html
+++ b/main.html
@@ -29,5 +29,7 @@
 
             <img  src="/image/map.png" alt="Blue rectangel, Pink tirangle, blue circle" usemap="#shapes_map">
 
+            <p>Disclaimer: ChatGPT was used to debug why the other area want canceling out, and it told me that the blank one goes first then the bigger one.</p>
+
     </body>
 </html>
